# src/app.service.ts
@@ -1,15 +1,35 @@
 import { Injectable, NotFoundException } from '@nestjs/common';
 import { CreateCatDto } from './dto/create-cat.dto';
 import { UpdateCatDto } from './dto/update-cat.dto';
+import { InjectRepository } from '@nestjs/typeorm';
+import { CatEntity } from './app.entity';
+import { Repository } from 'typeorm';
 
 @Injectable()
 export class AppService {
+  constructor(
+    @InjectRepository(CatEntity)
+    private readonly catRepository: Repository<CatEntity>,
+  ) {}
+
   getHello() {
     return 'Hello World!';
   }
 
+  async getCats({ limit = 10 }: { limit: number }) {
+    return await this.catRepository.find({
+      take: limit,
+    });
+  }
+
+  getCatsById(id: number) {
+    return this.catRepository.findOneBy({
+      id,
+    });
+  }
+
   createCat(payload: CreateCatDto) {
-    return JSON.stringify(payload, null, 2);
+    return this.catRepository.save(payload);
   }
 
   updateCat(id: number, payload: UpdateCatDto) {
@@ -19,7 +39,7 @@ export class AppService {
       );
     }
 
-    return JSON.stringify({ id, ...payload }, null, 2);
+    return this.catRepository.update(id, payload);
   }
 
   deleteCat(id: number) {
@@ -29,6 +49,6 @@ export class AppService {
       );
     }
 
-    return 'The record has been successfully deleted.';
+    return this.catRepository.delete(id);
   }
 }
